--- a/src/pages/auth/auth.module.scss
+++ b/src/pages/auth/auth.module.scss
@@ -11,4 +11,13 @@
     font-weight: bold;
     margin-bottom: 20px;
   }
+
+  .actionsContainer {
+    display: flex;
+    justify-content: flex-end;
+
+    button {
+      margin-left: 10px;
+    }
+  }
 }
