--- a/src/pages/locationInfo/styles.module.scss
+++ b/src/pages/locationInfo/styles.module.scss
@@ -1,36 +1,15 @@
-.charecterCard {
-  border-radius: 1rem;
-  box-shadow: none;
-  position: relative;
-  min-width: 200px;
-  min-height: 230px;
+.avatarContainer {
+  font-size: 60px !important;
+  width: 50% !important;
+  height: auto !important;
+  margin-bottom: 10px;
+  background-color: #009688 !important;
+  box-shadow: 1px 1px 12px -2px #00000085;
+  border: 1px solid white;
+  transition: background-color 0.3s ease;
+}
 
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 64%;
-    bottom: 0;
-    z-index: 1;
-    background: linear-gradient(to top, #000, rgba(0, 0, 0, 0));
-  }
-
-  .cardMedia {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    background-position: top;
-  }
-
-  .cardContainter {
-    position: absolute;
-    z-index: 2;
-    bottom: 0;
-    width: 100%;
-    color: white;
-  }
+.avatarContainer:before {
+  content: "";
+  padding-top: 100%;
 }
