--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,6 +1,16 @@
 header {
   justify-content: space-between;
   align-items: flex-start;
-  padding: 40px 60px;
+  padding: 30px;
   background: white;
+
+  .logo {
+    display: flex;
+    margin-bottom: 20px;
+
+    img {
+      width: 120px;
+      margin: 0 20px 20px 0;
+    }
+  }
 }
