adding not found component

--- a/src/pages/locations/styles.module.scss
+++ b/src/pages/locations/styles.module.scss
@@ -18,7 +18,7 @@
 .noLocationsWrapper {
   text-align: center;
   justify-content: center;
-  margin: auto;
+  margin: auto !important;
 
   p {
     margin: 20px 0;
