--- a/src/components/locationItem/styles.module.scss
+++ b/src/components/locationItem/styles.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 10px;
+  text-align: center;
 
   &:hover {
     .avatarContainer {
