--- a/src/components/loader/styles.module.scss
+++ b/src/components/loader/styles.module.scss
@@ -7,18 +7,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.5
-  ); /* Semi-transparent white background */
-  z-index: 999; /* Make sure it's on top of other elements */
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 999;
 }
 
 .loader {
-  border: 5px solid #f3f3f3; /* Light grey */
-  border-top: 5px solid #3498db; /* Blue */
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
   border-radius: 50%;
   width: 50px;
   height: 50px;
